--- a/clubs.html
+++ b/clubs.html
@@ -69,7 +69,7 @@
                         <div class="club-details">
                             <div class="detail-item">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Tech Building: Room 301</span>
+                                <span>Main Campus: Multimedia 3</span>
                             </div>
                             <div class="detail-item">
                                 <i class="fas fa-clock"></i>
@@ -113,7 +113,7 @@
                         <div class="club-details">
                             <div class="detail-item">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Arts Center: Studio B</span>
+                                <span>Main Campus: Studio</span>
                             </div>
                             <div class="detail-item">
                                 <i class="fas fa-clock"></i>
@@ -157,7 +157,7 @@
                         <div class="club-details">
                             <div class="detail-item">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Humanities Building: Room 205</span>
+                                <span>Main Campus: Lecture Room 5</span>
                             </div>
                             <div class="detail-item">
                                 <i class="fas fa-clock"></i>
@@ -252,7 +252,7 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <div class="contact-info">
-                        <p><i class="fas fa-map-marker-alt"></i> Student Center Main Campus Building</p>
+                        <p><i class="fas fa-map-marker-alt"></i>Main Campus Building</p>
                         <p><i class="fas fa-phone"></i> +266 56396873</p>
                         <p><i class="fas fa-envelope"></i> clubs@university.edu</p>
                         <p><i class="fas fa-clock"></i> Mon-Fri: 9AM-5PM</p>
@@ -268,4 +268,5 @@
     <script src="script.js"></script>
     <script src="club-registration.js"></script>
 </body>
+
 </html>
