--- a/contact.html
+++ b/contact.html
@@ -60,8 +60,7 @@
                             <div class="contact-details">
                                 <h3>Visit Us</h3>
                                 <p>Student Center Building</p>
-                                <p>Room 205, University Main Campus</p>
-                                <p>Hall 7 University Avenue</p>
+                                <p>Room 10, University MP Campus</p>
                             </div>
                         </div>
                         
@@ -193,18 +192,18 @@
         <div class="container">
             <div class="section-header">
                 <h2>Find Us on Campus</h2>
-                <p>Visit our office in the Student Center Building</p>
+                <p>Visit our office at Limkokwing University's Main Campus</p>
             </div>
             <div class="map-container">
                 <div class="map-placeholder">
                     <i class="fas fa-map-marked-alt"></i>
-                    <h3>Student Center Building</h3>
-                    <p>Room 205, Second Floor</p>
-                    <p>123 University Avenue</p>
+                    <h3>Limkokwing University</h3>
+                    <p>Main Campus</p>
+                    <p>Lecture Room 2</p>
                     <p>Campus Map Reference: SC-205</p>
                     <div class="map-directions">
                         <p><i class="fas fa-walking"></i> 5 min from Main Library</p>
-                        <p><i class="fas fa-bus"></i> Near Campus Shuttle Stop #3</p>
+                        <p><i class="fas fa-bus"></i> Near Campus Wings Cafe</p>
                     </div>
                 </div>
             </div>
@@ -224,18 +223,7 @@
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                     </div>
-                </div>
-                <div class="footer-section">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="clubs.html">Our Clubs</a></li>
-                        <li><a href="events.html">Events</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-                
+                </div>              
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 University Student Clubs. All rights reserved.</p>
@@ -245,4 +233,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
