Update print statement from 'Hello' to 'Goodbye'

--- a/events.html
+++ b/events.html
@@ -62,7 +62,7 @@
                             <div class="event-meta">
                                 <span><i class="fas fa-calendar"></i> November 15, 2025</span>
                                 <span><i class="fas fa-clock"></i> 9:00 AM - 5:00 PM</span>
-                                <span><i class="fas fa-map-marker-alt"></i> Innovation Hub</span>
+                                <span><i class="fas fa-map-marker-alt"></i> ;Manthabiseng Convention Center</span>
                                 <span><i class="fas fa-users"></i> Expected: 200+ Participants</span>
                             </div>
                             <a href="#event-registration" class="btn btn-primary">Register Now</a>
@@ -80,7 +80,7 @@
                             <div class="event-meta">
                                 <span><i class="fas fa-calendar"></i> November 22, 2025</span>
                                 <span><i class="fas fa-clock"></i> 7:00 PM - 9:30 PM</span>
-                                <span><i class="fas fa-map-marker-alt"></i> University Auditorium</span>
+                                <span><i class="fas fa-map-marker-alt"></i> Lehakoe</span>
                                 <span><i class="fas fa-ticket-alt"></i> R10 Entry Fee</span>
                             </div>
                             <a href="#event-registration" class="btn btn-primary">Get Tickets</a>
@@ -211,7 +211,7 @@
                     <div class="event-content">
                         <h3>Basketball Tournament</h3>
                         <p class="event-time"><i class="fas fa-clock"></i> 2:00 PM - 5:00 PM</p>
-                        <p class="event-location"><i class="fas fa-map-marker-alt"></i> Main campus Gymnasium room</p>
+                        <p class="event-location"><i class="fas fa-map-marker-alt"></i> Lehakoe</p>
                         <p class="event-description">Intra-club basketball tournament. Come support your favorite teams! Snacks and refreshments provided.</p>
                         <div class="event-tags">
                             <span class="tag">Sports</span>
@@ -249,7 +249,7 @@
                     <div class="event-content">
                         <h3>Holiday Social Mixer</h3>
                         <p class="event-time"><i class="fas fa-clock"></i> 7:00 PM - 10:00 PM</p>
-                        <p class="event-location"><i class="fas fa-map-marker-alt"></i> Student Center MP</p>
+                        <p class="event-location"><i class="fas fa-map-marker-alt"></i> MP Campus</p>
                         <p class="event-description">End-of-semester social event for all club members to connect and celebrate. Food, music, and games included!</p>
                         <div class="event-tags">
                             <span class="tag">Social</span>
@@ -342,4 +342,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
