--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <div class="contact-info">
-                        <p><i class="fas fa-map-marker-alt"></i> Student Center Building</p>
+                        <p><i class="fas fa-map-marker-alt"></i> Main Campus Building</p>
                         <p><i class="fas fa-phone"></i> +266 56396873</p>
                         <p><i class="fas fa-envelope"></i> clubs@university.edu</p>
                         <p><i class="fas fa-clock"></i> Mon-Fri: 9AM-5PM</p>
@@ -159,4 +159,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
