Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/events.html
+++ b/events.html
@@ -62,7 +62,7 @@
                             <div class="event-meta">
                                 <span><i class="fas fa-calendar"></i> November 15, 2025</span>
                                 <span><i class="fas fa-clock"></i> 9:00 AM - 5:00 PM</span>
-                                <span><i class="fas fa-map-marker-alt"></i> ;Manthabiseng Convention Center</span>
+                                <span><i class="fas fa-map-marker-alt"></i> 'Manthabiseng Convention Center</span>
                                 <span><i class="fas fa-users"></i> Expected: 200+ Participants</span>
                             </div>
                             <a href="#event-registration" class="btn btn-primary">Register Now</a>
@@ -344,4 +344,5 @@
 </body>
 
 </html>
+
 
